# api-gateway/api/docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/v1/login": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "LogIn - Api for login users",
                 "consumes": [
                     "application/json"
@@ -61,6 +66,11 @@
         },
         "/v1/register/": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Sign - Api for registring users",
                 "consumes": [
                     "application/json"
@@ -294,6 +304,11 @@
         },
         "/v1/verification": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "LogIn - Api for verification users",
                 "consumes": [
                     "application/json"
